- fixed overflow issue

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,7 +1,8 @@
-.app-container {
+.app-main-container {
     /* 48px is the height of navbar */
     height: calc(100vh - 48px);
-    overflow-y: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;   
 }
 
 /* Styling scrollbar */
