--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,5 +5,7 @@ body {
     padding: 0px;
     background-color: #e4e4e4;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    overflow-y: hidden;
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
 }
